added responsive config for contact and change my resume to contact me

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 Institute of Technology </p>
                             <div class="home-contact-button">
                                 <div class="home-button">
-                                    <a href="#contact-page">My Resume</a>
+                                    <a href="#contact-page">Contact Me</a>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                     important to me & I'm dedicated 
                     to providing prompt and helpful responses.</p>
                 </div>
-                <form action="mailto:uday.navpet@gmail.com?subject=Contact Me from Protfolio" method="POST" enctype="text/plain">
+                <form action="mailto:uday.navpet@gmail.com?subject=Contact Me from Protfolio" method="POST" enctype="text/plain" class="form">
                     <div class="name-email-fields">
                         <div class="fields-div"><input type="text" name="Name" placeholder="Name*" class="input" id="name" required></div>
                         <div class="fields-div"><input type="email" name="Email" placeholder="Email*" class="input" id="name" required></div>
