fully responsive of three sections and added links to icons

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                             <img src="images/linkedin-logo_icon.png" alt="">
                         </div>
                         <div class="home-icons">
-                            <img src="images/instagram_icon.png" alt="">
+                            <a href="https://instagram.com/_udaykiran_reddy" target="_blank"><img src="images/instagram_icon.png" alt=""></a>
                         </div>
                         <div class="home-icons">
-                            <img src="images/gmail_icon.png" alt="">
+                            <a href="mailto:uday.navpet@gmail.com"><img src="images/gmail_icon.png" alt=""></a>
                         </div>
                     </div>
                     <div class="home-matter">
@@ -111,11 +111,11 @@
                             every project, ensuring the highest level of accuracy 
                             and efficiency</p>
                         <div class="profile-icons">
-                            <a href="https://seabeepraveen.github.io/My-Protfolio/" target="_blank"><img src="images/internet_icon.png" alt=""></a>
+                            <a href="https://udaynavapet.github.io/Portfolio/" target="_blank"><img src="images/internet_icon.png" alt=""></a>
                             <a href="mailto:uday.navpet@gmail.com"><img src="images/gmail_icon.png" alt=""></a>
-                            <a href="https://www.linkedin.com/in/praveen-cb/" target="_blank"><img src="images/linkedin-logo_icon.png" alt=""></a>
-                            <a href="https://github.com/seabeePraveen" target="_blank"><img src="images/github_icon.png" alt=""></a>
-                            <a href="https://instagram.com/praveen_nonsense" target="_blank"><img src="images/instagram_icon.png" alt=""></a>
+                            <a href="" target="_blank"><img src="images/linkedin-logo_icon.png" alt=""></a>
+                            <a href="https://github.com/UdayNavapet" target="_blank"><img src="images/github_icon.png" alt=""></a>
+                            <a href="https://instagram.com/_udaykiran_reddy" target="_blank"><img src="images/instagram_icon.png" alt=""></a>
                         </div>
                     </div>
                 </div>
