email mistake modified

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <a href="https://instagram.com/_udaykiran_reddy" target="_blank"><img src="images/instagram_icon.png" alt=""></a>
                         </div>
                         <div class="home-icons">
-                            <a href="mailto:uday.navpet@gmail.com"><img src="images/gmail_icon.png" alt=""></a>
+                            <a href="mailto:uday.navapet@gmail.com"><img src="images/gmail_icon.png" alt=""></a>
                         </div>
                     </div>
                     <div class="home-matter">
@@ -112,7 +112,7 @@
                             and efficiency</p>
                         <div class="profile-icons">
                             <a href="https://udaynavapet.github.io/Portfolio/" target="_blank"><img src="images/internet_icon.png" alt=""></a>
-                            <a href="mailto:uday.navpet@gmail.com"><img src="images/gmail_icon.png" alt=""></a>
+                            <a href="mailto:uday.navapet@gmail.com"><img src="images/gmail_icon.png" alt=""></a>
                             <a href="" target="_blank"><img src="images/linkedin-logo_icon.png" alt=""></a>
                             <a href="https://github.com/UdayNavapet" target="_blank"><img src="images/github_icon.png" alt=""></a>
                             <a href="https://instagram.com/_udaykiran_reddy" target="_blank"><img src="images/instagram_icon.png" alt=""></a>
@@ -138,7 +138,7 @@
                     important to me & I'm dedicated 
                     to providing prompt and helpful responses.</p>
                 </div>
-                <form action="mailto:uday.navpet@gmail.com?subject=Contact Me from Protfolio" method="POST" enctype="text/plain" class="form">
+                <form action="mailto:uday.navapet@gmail.com?subject=Contact Me from Protfolio" method="POST" enctype="text/plain" class="form">
                     <div class="name-email-fields">
                         <div class="fields-div"><input type="text" name="Name" placeholder="Name*" class="input" id="name" required></div>
                         <div class="fields-div"><input type="email" name="Email" placeholder="Email*" class="input" id="name" required></div>
