headings and name changed in main and about

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="home-matter">
               <div class="home-content">
                 <h2>Hi, I'am Uday👋</h2>
-                <h5>Machine Learnig Engineer</h5>
+                <h5>Data Engineer</h5>
                 <p>
                   A Passionate, Proficient and Experienced Machine Learning
                   engineer and a sophomore at Sardar Vallabhbhai National
@@ -115,7 +115,7 @@
                 <div class="about-title-div"></div>
               </div>
               <p>
-                Meet Uday Kiran Reddy, a skilled and innovative machine learning
+                Meet Navabpet Uday Kiran Reddy, a skilled and innovative machine learning
                 professional with a talent for developing creative solutions to
                 complex problems. Graduating Electronics and Communication at
                 SVNIT. I ensure that i will bring data-driven approach to every
