linked in links added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
           <div class="home-first-flex">
             <div class="social-icons">
               <div class="home-icons">
+                <a href="https://www.linkedin.com/in/uday-kiran-reddy-navabpet-7342391b6" target="_blank">
                 <img src="images/linkedin-logo_icon.png" alt="" />
+            </a>
               </div>
               <div class="home-icons">
                 <a href="https://instagram.com/_udaykiran_reddy" target="_blank"
@@ -130,7 +132,7 @@
                 <a href="mailto:uday.navapet@gmail.com"
                   ><img src="images/gmail_icon.png" alt=""
                 /></a>
-                <a href="" target="_blank"
+                <a href="https://www.linkedin.com/in/uday-kiran-reddy-navabpet-7342391b6" target="_blank"
                   ><img src="images/linkedin-logo_icon.png" alt=""
                 /></a>
                 <a href="https://github.com/UdayNavapet" target="_blank"
