added the skills link to the skills section

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
         </div>
       </div>
-      <div class="skills" id="skillspage">
+      <div class="skills" id="skills-page">
         <div class="skills-container">
           <div class="side-heading">
             <div class="about-heading">
@@ -170,7 +170,7 @@
           </div>
         </div>
       </div>
-
+      
       <div class="contact" id="contact-page">
         <div class="contact-container">
           <div class="contact-heading">
