--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <h2>Hi, I'am Uday👋</h2>
                 <h5>Data Engineer</h5>
                 <p>
-                  A Passionate, Proficient and Experienced Machine Learning
-                  engineer and a sophomore at Sardar Vallabhbhai National
+                  A Passionate, Proficient and Experienced Data
+                  Engineer and a sophomore at Sardar Vallabhbhai National
                   Institute of Technology
                 </p>
                 <div class="home-contact-button">
