changed main about

--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
                 <h2>Hi, I'am Uday👋</h2>
                 <h5>Data Engineer</h5>
                 <p>
-                  A Passionate, Proficient and Experienced Data
-                  Engineer and a sophomore at Sardar Vallabhbhai National
-                  Institute of Technology
+                  An Accomplished Data Engineer with a strong background, currently employed at HCL, and a graduate of Sardar Vallabhbhai National Institute of Technology.
                 </p>
                 <div class="home-contact-button">
                   <div class="home-button">
