changed about page about content

--- a/index.html
+++ b/index.html
@@ -115,11 +115,7 @@
                 <div class="about-title-div"></div>
               </div>
               <p>
-                Meet Navabpet Uday Kiran Reddy, a skilled and innovative machine learning
-                professional with a talent for developing creative solutions to
-                complex problems. Graduating Electronics and Communication at
-                SVNIT. I ensure that i will bring data-driven approach to every
-                project, ensuring the highest level of accuracy and efficiency
+                Meet Navabpet Uday Kiran Reddy, a proficient and innovative Data Engineer professional with a proven track record at HCL. A graduate in Electronics and Communication from Sardar Vallabhbhai National Institute of Technology, I am dedicated to implementing a data-driven approach in every project, guaranteeing the utmost accuracy and efficiency.
               </p>
               <div class="profile-icons">
                 <a
