--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h2>Hi, I'am Uday👋</h2>
                 <h5>Data Engineer</h5>
                 <p>
-                  An Accomplished Data Engineer with a strong background, currently employed at HCL, and a graduate of Sardar Vallabhbhai National Institute of Technology.
+                  I am an accomplished Data Engineer with a solid foundation in data solutions, currently working at HCL Technologies. I hold a degree from Sardar Vallabhbhai National Institute of Technology, where I developed the skills that drive my passion for building scalable, efficient data infrastructure.
                 </p>
                 <div class="home-contact-button">
                   <div class="home-button">
@@ -115,7 +115,7 @@
                 <div class="about-title-div"></div>
               </div>
               <p>
-                Meet Navabpet Uday Kiran Reddy, a proficient and innovative Data Engineer professional with a proven track record at HCL. A graduate in Electronics and Communication from Sardar Vallabhbhai National Institute of Technology, I am dedicated to implementing a data-driven approach in every project, guaranteeing the utmost accuracy and efficiency.
+                I am Navabpet Uday Kiran Reddy, a dedicated and accomplished Data Engineer with a solid record of performance at HCL. Holding a degree in Electronics and Communication from Sardar Vallabhbhai National Institute of Technology, I am committed to leveraging data-driven methodologies to deliver precise and efficient solutions in every project I undertake.
               </p>
               <div class="profile-icons">
                 <a
@@ -157,9 +157,7 @@
           <div class="skills-main-content">
             <div class="heading">Data Engineer</div>
             <div class="sub-content">
-              Skilled in SQL, Python, and various data warehousing technologies.
-              Committed to enhancing data-driven decision-making through
-              efficient and scalable solutions.
+              Experienced in SQL, Python, Pyspark and leading data engineering tools like Azure Databricks, Azure Datafactory and Devops. Proficient in building secure, scalable data pipelines on Microsoft Azure for real-time and batch processing. Skilled in CI/CD, DevOps and automation, I drive data-driven decisions by delivering efficient, high-quality data solutions.
             </div>
           </div>
         </div>
